# interax

./: Cargo.toml  README.md
crates/interax-tui-fwk/: Cargo.toml
crates/interax-tui-fwk/examples/: counter.rs  focus_tables.rs  tabs.rs
crates/interax-tui-fwk/src/: app.rs  bus.rs  component.rs  context.rs  event.rs  focus.rs  lib.rs  tabs.rs  task.rs  terminal.rs
crates/interax-tui-monitor/: Cargo.toml
