[package]
name = "interax-tui-fwk"
version.workspace = true
rust-version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
categories.workspace = true

[dependencies]
ratatui = {workspace = true }
crossterm = { version = "0.28", features = ["event-stream"] }
tokio = { workspace = true }
futures = "0.3"
smallvec = "1.13"

[features]
default = []
blocking-tasks = []
